--- a/gestao-eventos-web/WebContent/css/visual.css
+++ b/gestao-eventos-web/WebContent/css/visual.css
@@ -16,3 +16,7 @@ body {
 	-moz-box-shadow: 0px 2px 9px -2px rgba(51,50,51,0.91);
 	box-shadow: 0px 2px 9px -2px rgba(51,50,51,0.91);
 }
+
+.btn-delete {
+	border-radius: 0 !important;
+}
