--- a/gestao-eventos-web/WebContent/css/relatorios.css
+++ b/gestao-eventos-web/WebContent/css/relatorios.css
@@ -5,3 +5,10 @@
 	-moz-box-shadow: 0px 3px 5px -1px rgba(161,155,161,1);
 	box-shadow: 0px 3px 5px -1px rgba(161,155,161,1);
 }
+
+.btn-ano {
+	border-radius: 0;
+	webkit-box-shadow: 0px 3px 5px -1px rgba(161,155,161,1);
+	-moz-box-shadow: 0px 3px 5px -1px rgba(161,155,161,1);
+	box-shadow: 0px 3px 5px -1px rgba(161,155,161,1);
+}
