--- a/gestao-eventos-web/WebContent/css/visual.css
+++ b/gestao-eventos-web/WebContent/css/visual.css
@@ -20,3 +20,29 @@ body {
 .btn-delete {
 	border-radius: 0 !important;
 }
+
+#form-add-produtos {
+	background-color: white;
+	width: 50%;
+	padding: 5%;
+	-webkit-box-shadow: 0px 2px 9px -2px rgba(51,50,51,0.91);
+	-moz-box-shadow: 0px 2px 9px -2px rgba(51,50,51,0.91);
+	box-shadow: 0px 2px 9px -2px rgba(51,50,51,0.91);
+}
+
+.form-container-produtos {
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center !important;
+}
+
+.container-produtos {
+	margin: 2% 0;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center !important;
+}
